made some changes to the menus, fixed the scaling issues, TODO: add wiki and option settings

--- a/ImmuneSystemAttacker/.godot/global_script_class_cache.cfg
+++ b/ImmuneSystemAttacker/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://script/main_menu.gd"
+}, {
+"base": &"Control",
+"class": &"OptionsMenu",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/options_menu.gd"
 }])
