--- a/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
+++ b/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,7 +10,7 @@ dock_split_2=45
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-381
+dock_hsplit_3=-464
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=6
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/main_menu.tscn")
-current_scene="res://Scenes/main_menu.tscn"
+open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/main_menu.tscn", "res://Scenes/options_menu.tscn", "res://Scenes/settings_tab_container.tscn")
+current_scene="res://Scenes/options_menu.tscn"
 center_split_offset=-285
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script/global.gd", "res://Enemies/scripts/macrophage.gd", "res://script/main_menu.gd", "res://script/player.gd", "res://script/world.gd"]
+open_scripts=["res://script/global.gd", "res://Enemies/scripts/macrophage.gd", "res://script/main_menu.gd", "res://Scenes/options_menu.gd", "res://script/player.gd", "res://script/world.gd"]
 selected_script="res://script/main_menu.gd"
 open_help=[]
 script_split_offset=70
