--- a/ImmuneSystemAttacker/.godot/editor/script_editor_cache.cfg
+++ b/ImmuneSystemAttacker/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 5,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 87,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 4,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/options_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
