--- a/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
+++ b/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,27 +17,27 @@ dock_filesystem_v_split_offset=6
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/world.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script/", "res://Scenes/", "res://Enemies/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Enemies/scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://script/", "res://Scenes/", "res://Enemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/main_menu.tscn", "res://Scenes/options_menu.tscn", "res://Scenes/settings_tab_container.tscn")
-current_scene="res://Scenes/options_menu.tscn"
+open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/macrophage_spawner.tscn", "res://Scenes/natural_killer_cell_spawner.tscn", "res://Scenes/neutrophils_spawner.tscn", "res://Enemies/macrophage.tscn", "res://Enemies/antibodies.tscn", "res://Enemies/naturalKillerCell.tscn", "res://Enemies/neutrophils.tscn", "res://Enemies/plasmaCell.tscn", "res://Scenes/player.tscn", "res://Scenes/hud.tscn", "res://Scenes/kamikaziSpawner.tscn")
+current_scene="res://Enemies/plasmaCell.tscn"
 center_split_offset=-285
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://script/global.gd", "res://Enemies/scripts/macrophage.gd", "res://script/main_menu.gd", "res://Scenes/options_menu.gd", "res://script/player.gd", "res://script/world.gd"]
-selected_script="res://script/main_menu.gd"
+open_scripts=["res://Enemies/scripts/antibodies.gd", "res://script/global.gd", "res://script/hud.gd", "res://Enemies/scripts/macrophage.gd", "res://Enemies/scripts/plasma_cell.gd", "res://script/macrophageSpawner.gd", "res://script/kamikazi_spawner.gd", "res://script/naturalKillCellSpawner.gd", "res://Enemies/scripts/natural_killer_cell.gd", "res://Enemies/scripts/neutrophils.gd", "res://script/neutrophilsSpawner.gd", "res://script/player.gd", "res://script/world.gd"]
+selected_script="res://Enemies/scripts/plasma_cell.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=196
 list_split_offset=0
 zoom_factor=1.0
 
@@ -50,8 +50,8 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
+log_filter_0=true
+log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=false
