--- a/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
+++ b/ImmuneSystemAttacker/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/Knife.tscn", "res://Scenes/player.tscn")
-current_scene="res://Scenes/player.tscn"
+current_scene="res://Scenes/world.tscn"
 center_split_offset=-288
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
